--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,7 @@ select {
     display: inline-block;
     height: 25px;
     padding: 1px 2px;
-    margin: 5px;
+    margin: 1px 2px;
     text-align: center;
     color: var(--brand-white) !important;
 }
