--- a/css/style.css
+++ b/css/style.css
@@ -520,12 +520,14 @@ select {
     float: left;
     color: var(--brand-dark-blue-1);
     font-weight: 600;
+    font-size: .9rem;
 }
 
 .sorting-table #example_paginate {
     float: right;
     display: flex;
     align-items: center;
+    font-size: .9rem;
 }
 
 .sorting-table .paginate_button {
@@ -538,10 +540,9 @@ select {
 .sorting-table #example_paginate span .paginate_button {
     background: var(--brand-dark-gray-2);
     border-radius: 50%;
-    width: 25px;
     display: inline-block;
-    height: 25px;
-    padding: 1px 2px;
+    width: 22px;
+    height: 22px;
     margin: 1px 2px;
     text-align: center;
     color: var(--brand-white) !important;
@@ -1261,7 +1262,7 @@ header .btn {
     font-family: var(--font-fa);
     content: "\f138";
     font-weight: 600;
-    opacity: 0.45;
+    opacity: 1;
     font-size: 1.6rem;
 }
 
@@ -1269,8 +1270,15 @@ header .btn {
     font-family: var(--font-fa);
     content: "\f137";
     font-weight: 600;
-    opacity: 0.45;
+    opacity: 1;
     font-size: 1.6rem;
+}
+
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+    opacity: .45;
 }
 
 .slick-dots {
@@ -2735,4 +2743,17 @@ header .btn {
         margin-top: 2rem;
     }
     
+}
+
+
+@media (min-width: 1199.99px) {
+
+    .games-btns.games-btns--side-bnts button.slick-prev {
+        transform: translate(-50px, -70px)
+    }
+
+    .games-btns.games-btns--side-bnts button.slick-next {
+        transform: translate(50px, -70px)
+    }
+
 }
