izmene za futer i partnere

--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ img {
 }
 
 .skewed-bg {
-    background: var(--brand-light-blue-4);
+    background: var(--brand-light-gray);
     padding: 0;
     transform: skew(0deg, -10deg);
     padding: 30px 0;
@@ -2373,7 +2373,7 @@ header .btn {
     font-weight: 300;
     line-height: 1.5;
     display: inline-block;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     margin: 0.5em 0;
 }
 
