--- a/css/style.css
+++ b/css/style.css
@@ -604,6 +604,12 @@ select {
     background: var(--brand-black);
 }
 
+/* Fix for 100% width on thead */
+.sorting-table .display.nowrap,
+.sorting-table .dataTables_scrollHeadInner {
+    width: 100% !important;
+}
+
 
 
 /* LONG SHADOW */
@@ -2421,6 +2427,10 @@ header .btn {
     flex-direction: row;
 }
 
+.list-tabb__inner {
+
+}
+
 
 /* PRE FOOTER */
 .pre-footer {
@@ -2659,6 +2669,23 @@ header .btn {
         margin: 10px 0 0;
     }
 
+    .list-group--nd>button,
+    .list-group--nd .dropdown button {
+        font-size: 0.7rem;
+        border-radius: 4px !important;
+        padding: 0.45rem 0;
+        width: 25%;
+        white-space: pre-line;
+    }
+
+    .list-group--nd .dropdown-item {
+        font-size: 0.7rem;
+    }
+
+    .list-group--nd .dropdown-menu {
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, .1);
+    }
+
     .img-xs {
         width: 300px;
         max-width: 100%;
@@ -2819,9 +2846,8 @@ header .btn {
         padding: 0;
     }
 
-    .list-group--nd>button {
-        font-size: 0.9rem;
-        border-radius: 4px !important;
+    .list-group--nd {
+        align-items: center;
     }
 
     .justify-content-left-sm {
