--- a/css/style-1.css
+++ b/css/style-1.css
@@ -2351,12 +2351,15 @@ ul.red-star li {
 		top: 40px;
 	}
 
-	.sorting-table #pregled-uplata_wrapper.dataTables_wrapper>div:first-child {
+	/* todo */
+	.sorting-table #pregled-uplata_wrapper.dataTables_wrapper>div:first-child,
+	.sorting-table #pregled-isplata_wrapper.dataTables_wrapper>div:first-child {
 		align-items: flex-start;
 		flex-direction: column;
 	}
 
-	.sorting-table #pregled-uplata_length {
+	.sorting-table #pregled-uplata_length,
+	.sorting-table #pregled-isplata_length {
 		margin: 10px 0;
 	}
 
