--- a/css/style-1.css
+++ b/css/style-1.css
@@ -2073,6 +2073,77 @@ ul.red-star li {
 	font-size: 15px;
 }
 
+.happyBox .link-arrow {
+	font-size: 15px;
+}
+
+.truncate-overflow {
+	--max-lines: 4;
+	position: relative;
+	max-height: calc(1.4rem * var(--max-lines));
+	overflow: hidden;
+	padding-right: .2rem;
+}
+
+.truncate-overflow::before {
+  position: absolute;
+  content: "...";
+  inset-block-end: 0; /* "bottom" */
+  inset-inline-end: 0; /* "right" */
+}
+
+.truncate-overflow::after {
+  content: "";
+  position: absolute;
+  inset-inline-end: 0; /* "right" */
+  width: 1rem;
+  height: 1rem;
+}
+
+.donacija__img {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	position: relative;
+}
+
+.donacija__img img {
+	width: 200px;
+}
+
+.donacija__img::before {
+	content: url(../images/dobitnici/crvene-tackice.svg);
+	width: 200px;
+	position: absolute;
+	left: 50%;
+	bottom: 10px;
+	transform: translateX(calc(-50% - 300px));
+}
+
+.donacija__img::after {
+	content: url(../images/dobitnici/crvene-tackice.svg);
+	width: 200px;
+	position: absolute;
+	right: 50%;
+	bottom: 10px;
+	transform: translateX(calc(50% + 300px));
+}
+
+.donacija__txt {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	margin: 60px 0 100px;
+}
+
+.donacija__txt p a {
+	display: block;
+	text-align: center;
+	text-decoration: underline;
+	color: var(--brand-dark-gray);
+}
+
 /* Large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
 	.la-linea {
