--- a/css/style.css
+++ b/css/style.css
@@ -3065,6 +3065,11 @@ header .btn {
     .mt-xxs-2 {
         margin-top: 2rem;
     }
+
+    .px-xs-2 {
+        padding-left: .5rem !important;
+        padding-right: .5rem !important;
+    }
     
 }
 
